# podio

./: .travis.yml  Cargo.toml  README.md  appveyor.yml  shippable.yml
.travis/: id_rsa.enc  publish_doc.sh  travis-doc-upload.cfg
script/: doc-upload.cfg  kcov.sh
src/: lib.rs
tests/: bytes.rs  io.rs
